--- a/lab7/src/main/resources/application.properties
+++ b/lab7/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=lab7
+# MySQL Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/cs489
+spring.datasource.username=root
+spring.datasource.password=toor
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Server port
+server.port=8080                                                                 
