--- a/lab7/src/main/resources/application.properties
+++ b/lab7/src/main/resources/application.properties
@@ -1,14 +1,18 @@
-spring.application.name=lab7
-# MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/cs489
-spring.datasource.username=root
-spring.datasource.password=toor
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.application.name=ads
+server.port=6001
+spring.main.banner-mode=off
+#logging.level.root=off
+#logging.level.sql=off
 
-# Hibernate Configuration
+#Database config settings
+spring.datasource.url=jdbc:mysql://localhost:3306/ads
+#for docker
+#spring.datasource.url=jdbc:mysql://mysql:3306/ads
+spring.datasource.username=root
+spring.datasource.password=123456
+
+#JPA/Hibernate config settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# Server port
-server.port=8080                                                                 
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
