lab 7 vs lab 9 same submition because lab9 implement security

--- a/lab9/src/main/resources/application.properties
+++ b/lab9/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-spring.application.name=lab9
+spring.application.name=ads
+server.port=6001
+spring.main.banner-mode=off
+#logging.level.root=off
+#logging.level.sql=off
+
+#Database config settings
+spring.datasource.url=jdbc:mysql://localhost:3306/ads
+#for docker
+#spring.datasource.url=jdbc:mysql://mysql:3306/ads
+spring.datasource.username=root
+spring.datasource.password=123456
+
+#JPA/Hibernate config settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
